syntax = "proto3";

package moderation.v1;

import "google/api/annotations.proto";

option go_package = "moderation/api/moderation/v1;v1";
option java_multiple_files = true;
option java_package = "moderation.v1";
option objc_class_prefix = "APImoderationV1";
// ModerationService provides content moderation for posts and comments.
service ModerationService {
  rpc Moderate(ModerateRequest) returns (ModerationResponse) {
    option (google.api.http) = {
      post : "/api/v1/moderate"
      body : "*"
    };
  }
  // ModerateContent checks a content for harmful content.
  rpc ModerateContent(ModerateContentRequest) returns (ModerationResponse) {
    option (google.api.http) = {
      post : "/api/v1/moderate/content"
      body : "*"
    };
  }

  // ModerateImage checks an image for harmful content.
  rpc ModerateImage(ModerateImageRequest) returns (ModerationResponse) {
    option (google.api.http) = {
      post : "/api/v1/moderate/image"
      body : "*"
    };
  }

  // ModerateVideo checks an video for harmful content.
  rpc ModerateVideo(ModerateVideoRequest) returns (ModerationResponse) {
    option (google.api.http) = {
      post : "/api/v1/moderate/video"
      body : "*"
    };
  }

  //  ModerateAudio checks an audio for harmful content.
  rpc ModerateAudio(ModerateAudioRequest) returns (ModerationResponse) {
    option (google.api.http) = {
      post : "/api/v1/moderate/audio"
      body : "*"
    };
  }

  // BatchModerate checks multiple items at once.
  rpc BatchModerate(BatchModerateRequest) returns (BatchModerateResponse) {
    option (google.api.http) = {
      post : "/api/v1/moderate/batch"
      body : "*"
    };
  }
}

// ModerateRequest messages
message ModerateRequest {
  string request_id = 1;
  string owner_id = 2;
  string content = 3;
  repeated string image_urls = 4;
  repeated string audio_urls = 5;
  repeated string video_urls = 6;
}

message ModerateContentRequest {
  string request_id = 1;
  string owner_id = 2;
  string content = 3;
}

message ModerateImageRequest {
  string request_id = 1;
  string owner_id = 2;
  string image_url = 3;
}

message ModerateAudioRequest {
  string request_id = 1;
  string owner_id = 2;
  string audio_url = 3;
}

message ModerateVideoRequest {
  string request_id = 1;
  string owner_id = 2;
  string video_url = 3;
}

message ModerationResponse {
  string request_id = 1;
  ModerationAction action = 2;
  Verdict verdict = 3;
  string reason = 4;
  repeated string categories = 5;
  map<string, double> scores = 6;
}

enum ModerationAction {
  MODERATION_ACTION_UNSPECIFIED = 0;
  MODERATION_ACTION_AUTO_APPROVE = 1;
  MODERATION_ACTION_AUTO_REJECT = 2;
  MODERATION_ACTION_PENDING_REVIEW = 3;
}

enum Verdict {
  VERDICT_UNSPECIFIED = 0;
  VERDICT_CLEAN = 1;
  VERDICT_REJECT = 2;
  VERDICT_REVIEW = 3;
}

message BatchModerateRequest { repeated ModerateRequest items = 1; }

message BatchModerateResponse { repeated ModerationResponse results = 1; }
